# nlp_engineering

./: README.md  pyproject.toml
lab/: M1_L1_lecture_nb_01_preprocessing.ipynb  M1_L1_lecture_nb_02_word frequencies.ipynb  README.md
notebook/: 01-notebook.ipynb
