[project]
name = "15-nlp-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.3",
    "spacy>=3.8.13",
    "torch>=2.11.0",
    "utils>=1.0.2",
]
